# ab_backend

./: .env  .gitignore  Dockerfile  README.md  analyse_picture.py  convert_to_dict.py  cors_config.py  docker-compose.yml  exel_conver.py  main.py  pyproject.toml  requirements.txt
NT_O_Detection_v3_800/: anaylse_img.py
NT_O_Detection_v3_800/NT_O3/NT_O_Detection3/NT-Detection-Test.v3i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
NT_O_Detection_v3_800/NT_O3/NT_O_Detection3/NT-Detection-Test.v3i.yolov8/test/labels/: Banner_3984139_jpg.rf.d940a8e4241b41ca45cd0a460152de7c.txt  Banner_VNR1272300031-33870-1-Trasse_54_Start_4049146_jpg.rf.fca3c9427d36971f35c625cca04071e3.txt  Banner_VNR1280400031-2962-1-V1030_4129099_jpg.rf.88bd758ba37e25f2b64c224e8a883115.txt  Banner_VNR1307700011-36332-7-V2908_4263559_jpg.rf.e6bb7b08d9b7d65b164af32373a2e7aa.txt  Banner_VNR1310000081-7127-5-Banner_4230694_jpg.rf.867659da7ce05c2bb0d88cfd988b6446.txt  NT-Gehause_3981391_jpg.rf.6e2f063ce2857718c96376b9ac25c5a0.txt  NT-Gehause_3984975_jpg.rf.73317df50feaf518688254db7db66d96.txt  NT-Gehause_4007788_jpg.rf.a61bb7e12316851769ad6cee0933f2ad.txt  NT-Gehause_4008402_jpg.rf.b114337a81d08937bfcc3d831c9b8c69.txt  NT-Gehause_4016089_jpg.rf.43e09e2e383f99cfa595235519da6da3.txt  NT-Gehause_4039819_jpg.rf.118efe7a92223cc190ba0d93f7e255de.txt  NT-Gehause_4045264_jpg.rf.9c21b1a6b26ef146432a366a39aeb2ed.txt  NT-Gehause_4113094_jpg.rf.5eec850811199587e3eb7df3cf0b8686.txt  NT-Gehause_4145907_jpg.rf.20b9fe67f9685c41e1f3155103d01397.txt  NT-Gehause_4171322_jpg.rf.46589891c09886daea062154611058e0.txt  NT-Gehause_4171357_jpg.rf.bee00c032b20c703c52a8c65b9db827f.txt  NT-Gehause_4179038_jpg.rf.a3682580ec5d74459c0122384800de36.txt  NT-Gehause_4204153_jpg.rf.87572ea8ed567c633eaeaf599781052d.txt  NT-Gehause_4205419_jpg.rf.e7455f15885111341f9d2b33d791a618.txt  NT-Gehause_4216356_jpg.rf.daf1d4dbb0532299f69c206e7b84a202.txt  NT-Gehause_4232869_jpg.rf.76cdcb94fd1944caab3aa8f9efb63b56.txt  NT-Gehause_4322396_jpg.rf.f5ecafa5dd66b21f3326d10ca5e73896.txt  NT-Gehause_VNR11278300011-3447-3-V2000_4080926_jpg.rf.166be11ad143b962970fc3dd29680674.txt  NT-Gehause_VNR11278300011-3447-3-V2014_4076736_jpg.rf.2014f23c44efb9c56d3a6314609647a1.txt  NT-Gehause_VNR11510-35955-2-V1073_3992528_jpg.rf.86d7c0c61fd48a76375f498e2301d168.txt  NT-Gehause_VNR11510-35955-2-V1088_3983027_jpg.rf.724835b24c3548b082c5f15f6ebbb9f3.txt  NT-Gehause_VNR11510-35955-2-V1105_3994729_jpg.rf.c28442def8a15a4fbb98abe7bb5e8b92.txt  NT-Gehause_VNR1224300031-3329-6-V6015_3973221_jpg.rf.3d2159d0b999533d5e68a4dda163d969.txt  (+119 more)
NT_O_Detection_v3_800/NT_O3/NT_O_Detection3/NT-Detection-Test.v3i.yolov8/train/: labels.cache
NT_O_Detection_v3_800/NT_O3/NT_O_Detection3/NT-Detection-Test.v3i.yolov8/valid/: labels.cache
NT_O_Detection_v3_800/NT_O3/NT_O_Detection3/runs/detect/train/: args.yaml  results.csv  (+1 more)
db/: __init__.py  engine.py  hash_password.py  models.py
jwt_utils/: __init__.py  auth.py  config.py
operations/: company_editor.py  email.py  superadmin.py  telekom_editor.py
routers/: MBFD_Bremen.xlsx  __init__.py  companyeditor_routers.py  email_router.py  routers.py  superadmin_routers.py  telekomeditor_routers.py
schemas/: _input.py
(+3323 files in other folders)
