[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["farzadgolzari"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
pydantic = "^2.9.2"
python-multipart = "^0.0.17"
python-dotenv = "^1.0.1"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
requests = "^2.32.3"
aiofiles = "^24.1.0"
aiomysql = "^0.2.0"
cryptography = "^44.0.0"
# Data Science & Image Processing
numpy = "^1.26.4"
pandas = "^2.2.3"
pillow = "^11.0.0"
opencv-python = "^4.10.0.84"
torch = "^2.5.1"
torchvision = "^0.20.1"
ultralytics = "^8.3.33"
# Socket & Network
python-socketio = "^5.12.1"
# Utils
xlrd = "^2.0.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
